Prevent flicker on iOS safari

--- a/src/carousel/animation.css
+++ b/src/carousel/animation.css
@@ -2,4 +2,5 @@
   transition: transform 200ms;
   transition-timing-function: cubic-bezier(0.645, 0.045, 0.355, 1.000); /* easeInOutCubic */
   will-change: transform;
+  -webkit-backface-visibility: hidden;
 }
